# sys-info-api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
docs/: api.md  build_guide.md  os_coverage.md  sys_info_api.collectors.bin.apt.md  sys_info_api.collectors.bin.arp.md  sys_info_api.collectors.bin.df.md  sys_info_api.collectors.bin.dmidecode.md  sys_info_api.collectors.bin.dpkg.md  sys_info_api.collectors.bin.hostnamectl.md  sys_info_api.collectors.bin.ifconfig.md  sys_info_api.collectors.bin.ip.md  sys_info_api.collectors.bin.iwconfig.md  sys_info_api.collectors.bin.lldptool.md  sys_info_api.collectors.bin.lsblk.md  sys_info_api.collectors.bin.lspci.md  sys_info_api.collectors.bin.lsusb.md  sys_info_api.collectors.bin.md  sys_info_api.collectors.bin.pkg.md  sys_info_api.collectors.bin.pveversion.md  sys_info_api.collectors.bin.rpm.md  sys_info_api.collectors.bin.sysctl.md  sys_info_api.collectors.bin.systemctl.md  sys_info_api.collectors.bin.uname.md  sys_info_api.collectors.bin.uptime.md  sys_info_api.collectors.bin.who.md  sys_info_api.collectors.bin.yum.md  sys_info_api.collectors.etc.lsb_release.md  sys_info_api.collectors.etc.md  sys_info_api.collectors.etc.os_release.md  sys_info_api.collectors.etc.version.md  sys_info_api.collectors.etc.yum_repos.md  sys_info_api.collectors.md  sys_info_api.common.bin_collector.md  sys_info_api.common.bin_collector_test.md  sys_info_api.common.cmd.md  sys_info_api.common.enums.md  sys_info_api.common.exceptions.md  sys_info_api.common.key_value_parser.md  sys_info_api.common.local_timezone.md  sys_info_api.common.md  (+3 more)
scripts/: gen_docs.sh
tests/: test_common.py  test_data.py  test_key_value_parser.py  test_yum_repos.py
(+165 files in other folders)
